changed the way assets are accessed on html

--- a/docs/_layouts/terminal.html
+++ b/docs/_layouts/terminal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}">
+  <link rel="stylesheet" href="/CTF-Writeups/docs/assets/styles.css">
 </head>
 <body>
   <div class="terminal">
@@ -17,6 +17,6 @@
       <input type="text" id="command-input" placeholder="Type a command..." autofocus>
     </div>
   </div>
-  <script src="{{ '/assets/scripts.js' | relative_url }}"></script>
+  <script src="/CTF-Writeups/docs/assets/scripts.js"></script>
 </body>
 </html>
